# graphiti

./: .env.example  .gitignore  BUG_REPORT-filepath-handling-windows.md  BUG_REPORT-group-id-validation-encoding.md  CLAUDE.md  CLAUDE_CHANGELOG.md  CLAUDE_INSTALL.md  CLAUDE_INSTALL_NEO4J_AURA.md  CLAUDE_INSTALL_NEO4J_COMMUNITY_WINDOWS_SERVICE.md  CLAUDE_MCP_TEMPLATE.md  CLAUDE_MIGRATE.md  CLAUDE_README.md  CONFIGURATION.md  CONFIGURATION_SUMMARY.md  CONTRIBUTING.md  MCP_DISCONNECT_ANALYSIS.md  PERFORMANCE_ANALYSIS_REPORT.md  README.md  SETUP_AGENT_INSTRUCTIONS.md  conftest.py  credentials.txt.template  generate_json_schema.py  graphiti-filter.config.json  graphiti.config.example.json  graphiti.config.json  graphiti.config.schema.json  pyproject.toml  setup-graphiti-env.ps1  setup-neo4j-community-env.ps1  test_neo4j_community_connection.py
.claude/: .gitignore  (+3 more)
mcp_server/: README.md  __init__.py  config_cli.py  config_validator.py  export_helpers.py  filter_manager.py  graphiti_mcp_server.py  llm_provider.py  manual_sync.py  namespace_filter.py  pyproject.toml  responses.py  session_manager.py  session_tracking_cli.py  unified_config.py
mcp_server/api/: __init__.py  client.py  management.py
mcp_server/daemon/: bootstrap.py  generate_requirements.py  installer.py  installer_migration.py  launchd_service.py  manager.py  package_deployer.py  path_integration.py  paths.py  systemd_service.py  task_scheduler_service.py  uninstall_linux.sh  uninstall_macos.sh  uninstall_windows.ps1  v2_cleanup.py  v2_detection.py  venv_manager.py  windows_service.py  wrapper_generator.py
(+960 files in other folders)
