[project]
name = "mcp-server"
version = "0.4.0"
description = "Graphiti MCP Server"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "mcp>=1.5.0",
    "openai>=1.68.2",
    "azure-identity>=1.21.0",
    "graphiti-core",
]

[project.scripts]
graphiti-mcp = "mcp_server.graphiti_mcp_server:main"
graphiti-mcp-session-tracking = "mcp_server.session_tracking_cli:main"

[tool.uv.sources]
graphiti-core = { path = "../", editable = true }
